selfhost/test/typechecker/import/error_assignment_to_imported_variable.out
Error at %FILE_NAME%:3:1
Cannot assign to variable 'a'
  |  a = 456
     ^
'a' is an import, which cannot be overwritten
